# total-reaper-mcp

./: .gitignore  CLEANUP_REPORT.md  EXPANSION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_MASTER.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_COMPLETE.md  LICENSE  MIGRATION_NOTES.md  README.md  connect_to_relay.py  dsl_phase1_final_status.md  dsl_phase1_fixes_summary.md  launch_complete_api.sh  launch_mcp_server.sh  launch_mcp_server_dsl.sh  pyproject.toml  reaper_mcp_development_guide.md  reload_bridge_instructions.txt  run_test_subset.py  run_tests.sh  run_with_relay.py  start_mcp_server.sh  test_bridge_functions.py  test_bridge_version.py  test_modern_integration.py  test_modern_pattern.py  test_quick.py  test_summary.py
.venv-new/: pyvenv.cfg
backup_20250712_111025/: mcp_bridge.lua  test_integration.py
docs/: ARCHIVED_IMPLEMENTATION_NOTES.md  DSL_BRIDGE_IMPLEMENTATION.md  DSL_DEFAULT_PROFILE.md  DSL_INSTALLATION.md  DSL_README.md  DSL_STATUS.md  HANDLE_PATTERN.md  MIGRATION_PLAN.md  MODERN_MCP_MIGRATION.md
examples/: full_api_demo.py
generated_api/: SUMMARY.md  handlers.py  lua_handlers.lua  tests.py  tools.py
legacy_archive/: app.py  app_complete.py  app_file_bridge_full.py
lua/: mcp_bridge.lua  mcp_bridge.lua.backup_20250712_113058  mcp_bridge_complete.lua  mcp_bridge_file_full.lua  mcp_bridge_file_v2.lua  mcp_bridge_no_socket.lua  mcp_bridge_with_registry.lua  test_bridge.lua
reaper-chat/: RUN-TRACKED-TESTS.md  test-nlp-full-execution.js  test-nlp-with-evaluation.js  test-nlp-with-tracking.js
(+179 files in other folders)
