[project]
name = "reaper-mcp-server"
version = "0.1.0"
description = "MCP Server for REAPER DAW"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.1.2",
    "uvicorn[standard]>=0.32.1",
    "websockets>=12.0",
]

[project.scripts]
reaper-mcp = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"